Java17 upgrade (#66)
* dwc-api version

* updating dependecies, removing calls to deprecated methods, applying minor improvements

* dwc-api version bumped

---------

Co-authored-by: Marcos Lopez Gonzalez <marcoslg@gmail.com>
Co-authored-by: fmendezh <federicomh@gmail.com>